--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-image-picker": "^3.2.1",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
