--- a/ios/doWhat/Info.plist
+++ b/ios/doWhat/Info.plist
@@ -53,5 +53,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>RobotoMono-Italic.ttf</string>
+		<string>RobotoMono-Medium.ttf</string>
+		<string>RobotoMono-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
